fixed logo alignment

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
     font-size: 25px;;
 }
 img {
-    margin: 0 42vw;
+    margin: 0 45vw;
     height: 50px;
     
 }
